# neutrino

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NATS_PLAN.md  README.md  TESTING.md  config.yaml  main.py  openapi.json  pyproject.toml  test_resource_scheduling.py  test_resources.py
benchmarks/: PERFORMANCE_SUMMARY.md  TEST_RESULTS.md  cluster_throughput_test.py  results.json
crates/neutrino-core/: Cargo.toml  test_resources.py
crates/neutrino-core/src/: asgi_manager.rs  config.rs  lib.rs  main.rs
crates/neutrino-core/src/http/: mod.rs
crates/neutrino-core/src/openapi/: mod.rs
crates/neutrino-core/src/orchestrator/: mod.rs
crates/neutrino-core/src/protocol/: mod.rs
crates/neutrino-core/src/worker/: memory.rs  mod.rs
crates/neutrino-core/tests/: serialization_tests.rs
crates/neutrino-gateway/: Cargo.toml
crates/neutrino-gateway/src/: backend_pool.rs  config.rs  db_logger.rs  main.rs  proxy.rs
dashboard/: Dockerfile  README.md  app.py  requirements.txt
docs/: gateway-routing-plan.md  plan-deploy-cli.md  plan-route-registration.md
examples/: README.md  config.example.yaml  config_gpu.yaml  fastapi_integration.py  gpu_resources.py  openapi.json  test_openapi_routing.rs  test_routes.py
gateway/: Dockerfile
k8s/: README.md  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  deployment.yaml  gateway-deployment.yaml  gateway-rbac.yaml  gateway-service.yaml  service.yaml
python/: pyproject.toml
python/cli/: __init__.py  discovery.py  main.py  manifest.py
python/neutrino/: __init__.py  app.py  exceptions.py  model.py  openapi_generator.py  route.py
python/neutrino/cli/: __init__.py  discovery.py  main.py  manifest.py
python/neutrino/internal/: __init__.py
python/neutrino/internal/worker/: __init__.py  main.py  protocol.py
python/tests/: __init__.py  test_app.py  test_cli.py  test_serialization.py
scripts/: deploy.sh  migrate_db.py
