[project]
name = "neutrino"
version = "0.1.0"
description = "High-performance distributed orchestration and model serving framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msgpack>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
neutrino = "neutrino.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neutrino"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
