[package]
name = "neutrino-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
serde_yaml = "0.9"
serde_json = "1.0"
