[package]
name = "neutrino-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = "1.0"
chrono = "0.4"
neutrino-core = { path = "../neutrino-core" }
kube = { version = "0.96", features = ["client", "runtime"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }

[[bin]]
name = "neutrino-gateway"
path = "src/main.rs"
